--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,7 @@
 }
 
 body {
-  width: 90%;
-  
-  margin: auto;
+  background-color: var(--almost-white);
 
   font-family: 'Epilogue', sans-serif;
 }
@@ -29,7 +27,7 @@ header {
   color: var(--medium-gray);
 
   
-  padding: 1rem 3rem;
+  padding: 1.5rem 3rem;
 }
 
 header div {
@@ -74,4 +72,29 @@ header .account .register {
 
 header .account .register:hover {
   background: var(--almost-white);
+}
+
+main {
+  display: flex;
+  justify-content: space-around;
+
+  width: 85%;
+
+  margin: auto;
+}
+
+main .info {
+  width: 50%;
+  margin-top: 2rem;
+}
+
+main .info .title {
+  font-size: 5rem;
+  margin-top: 2.5rem;
+  width: 93%;
+  margin-bottom: 2rem;
+}
+
+main .inside-image .image {
+  width: 400px;
 }
