--- a/css/style.css
+++ b/css/style.css
@@ -77,22 +77,47 @@ header .account .register:hover {
 main {
   display: flex;
   justify-content: space-around;
-
-  width: 85%;
+  align-items: center;
+  width: 83%;
 
   margin: auto;
+
 }
 
 main .info {
   width: 50%;
-  margin-top: 2rem;
+
+  margin-top: 6rem;
 }
 
 main .info .title {
   font-size: 5rem;
-  margin-top: 2.5rem;
   width: 93%;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
+}
+
+main .info .paragraph {
+  width: 70%;
+  color: var(--medium-gray);
+}
+
+main .info .learn-more {
+  display: inline-block;
+  margin-top: 40px;
+  border-radius: 10px;
+  padding: 15px;
+  text-decoration: none;
+  background-color: var(--almost-black);
+  color: var(--almost-white);
+  transition: .5s;
+}
+
+main .info .learn-more:hover {
+  transform: scale(1.2);
+}
+
+footer {
+  margin-top: 70px;
 }
 
 main .inside-image .image {
