--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ main .info .learn-more {
 
 main .info .learn-more:hover {
   background-color: var(--almost-white);
+  background-color: var(--almost-white);
   color: var(--almost-black);
 }
 
